--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <!--    <div class="container">-->
-    <div class="box static">static</div>
-    <div class="box fixed">fixed</div>
-    <div class="box sticky">sticky</div>
-    <div class="box relative">relative</div>
-    <div class="box absolute">absolute</div>
-    <!--    </div>-->
+    <section class="container">
+        <div class="box static">static</div>
+        <div class="box fixed">fixed</div>
+        <div class="box sticky">sticky</div>
+        <div class="box relative">relative</div>
+        <div class="box absolute">absolute</div>
+    </section>
     <article class="text">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut assumenda dolores nam numquam saepe, asperiores
             magnam hic adipisci repellendus eveniet cupiditate, inventore ea accusantium fuga voluptatum. Odio dolorem
@@ -52,8 +52,8 @@
             eveniet accusantium molestias doloremque explicabo. Lorem ipsum dolor sit amet, consectetur adipisicing
             elit. Obcaecati ipsum id, expedita doloribus, sequi necessitatibus veniam atque itaque sit voluptatem
             repellendus suscipit perferendis quae hic, fugit ut minima quis praesentium.</p>
-    </article>
-
+        </article>
+    
 </body>
 
 </html>
